--- a/style/index.css
+++ b/style/index.css
@@ -180,6 +180,7 @@ button {
 .flex-container {
 	display: flex;
 	width: 100%;
+	align-items: center;
 }
 
 .flex-container > *{
@@ -198,6 +199,7 @@ button {
 	top: 20px;
 	right: 20px;
 	padding: 10px;
+	z-index: 1;
 }
 
 /* ================================ Current Weather Section ================================ */
@@ -226,7 +228,7 @@ button {
 }
 
 #degrees-label {
-	font-size: 60px;
+	font-size: 80px;
 	font-weight: 900;
 }
 
@@ -268,20 +270,25 @@ button {
 }
 
 #toggle-weather {
-	background-color: #353B4B;
+	background-color: rgb(1, 204, 255);
 	border-radius: 100%;
 	width: 50px;
 	height: 50px;
-	box-shadow: 3px 0px 14px 2px rgba(000,000,000, .4);
+	box-shadow: 3px 0px 14px 2px rgba(4, 174, 241, 0.4);
 	z-index: 3;
 	position: absolute;
 	transform: translate(-50%, -50%);
+}
+
+#toggle-weather img {
+	transition: transform .5s;
 }
 
 /* ================================ Daily Weather Panel ================================ */
 
 #daily-weather-wrapper {
 	background-color: rgba(255, 255, 255, 0.422);
+	transition: .5s;
 }
 
 .weather-container {
@@ -318,11 +325,10 @@ button {
 /* ================================ Hourly Weather Panel ================================ */
 
 #hourly-weather-wrapper {
-	background-color: rgba(26, 100, 161, 0.616);
+	background-color: rgba(87, 167, 233, 0.616);
 	color: #fff;
 	position: absolute;
 	bottom: -100%;
-	height: 40%;
 	transition: bottom .5s;
 }
 
@@ -344,7 +350,7 @@ button {
 }
 
 #menu-container > div {
-	background: #00Bfff;
+	background: rgba(0, 191, 255, 0.877);
 	height: 100%;
 	width: 100%;
 }
