--- a/style/index.css
+++ b/style/index.css
@@ -287,7 +287,7 @@ button {
 /* ================================ Daily Weather Panel ================================ */
 
 #daily-weather-wrapper {
-	background-color: rgba(255, 255, 255, 0.422);
+	background-color: rgba(129, 129, 129, 0.637);
 	transition: .5s;
 }
 
@@ -350,7 +350,7 @@ button {
 }
 
 #menu-container > div {
-	background: rgba(0, 191, 255, 0.877);
+	background: rgb(0, 191, 255);
 	height: 100%;
 	width: 100%;
 }
